objects/zkmulti__MCQueued_Shipment__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Bulk_Shipment__c</fullName>
        <label>Bulk Shipment</label>
        <referenceTo>zkmulti__MCBulk_Shipment__c</referenceTo>
        <relationshipName>Queued_Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Custom_Address_Source_Record_ID__c</fullName>
        <label>Custom Address Source Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Custom_Address_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Address Source</label>
        <referenceTo>zkmulti__MCCustom_Address_Source__c</referenceTo>
        <relationshipName>Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Dimension_Units__c</fullName>
        <label>Dimension Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__External_Customer_ID__c</fullName>
        <label>External Customer ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__External_Order_ID__c</fullName>
        <label>External Order ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__External_Return_ID__c</fullName>
        <label>External Return ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Label_Image_Type__c</fullName>
        <label>Label Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>ZPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Type__c</fullName>
        <label>Package Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Queued_Shipment_Special_Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Queued Shipment Special Services</label>
        <referenceTo>zkmulti__MCQueued_Shipment_Special_Services__c</referenceTo>
        <relationshipName>Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Address_is_Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Company__c</fullName>
        <label>Recipient Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Phone__c</fullName>
        <label>Recipient Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_State_Province__c</fullName>
        <label>Recipient State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Street__c</fullName>
        <label>Recipient Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Zip_Postal_Code__c</fullName>
        <label>Recipient Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference__c</fullName>
        <label>Reference</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_City__c</fullName>
        <label>Return From City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_Company__c</fullName>
        <label>Return From Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_Country__c</fullName>
        <label>Return From Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_Email__c</fullName>
        <label>Return From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_Name__c</fullName>
        <label>Return From Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_Phone_Number__c</fullName>
        <label>Return From Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_Postal_Code__c</fullName>
        <label>Return From Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_State__c</fullName>
        <label>Return From State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_Street_1__c</fullName>
        <label>Return From Street 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_Street_2__c</fullName>
        <label>Return From Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_From_Street_3__c</fullName>
        <label>Return From Street 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_Shipping_Option__c</fullName>
        <label>Return Shipping Option</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_City__c</fullName>
        <label>Return To City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_Company__c</fullName>
        <label>Return To Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_Country__c</fullName>
        <label>Return To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_Email__c</fullName>
        <label>Return To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_Name__c</fullName>
        <label>Return To Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_Phone_Number__c</fullName>
        <label>Return To Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_Postal_Code__c</fullName>
        <label>Return To Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_State__c</fullName>
        <label>Return To State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_Street_1__c</fullName>
        <label>Return To Street 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_Street_2__c</fullName>
        <label>Return To Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_To_Street_3__c</fullName>
        <label>Return To Street 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Address_is_Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sender Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_City__c</fullName>
        <label>Sender City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Company__c</fullName>
        <label>Sender Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Country__c</fullName>
        <label>Sender Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Email__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Phone__c</fullName>
        <label>Sender Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_State_Province__c</fullName>
        <label>Sender State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Street__c</fullName>
        <label>Sender Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Zip_Postal_Code__c</fullName>
        <label>Sender Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Service_Type__c</fullName>
        <label>Service Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Partially Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Units__c</fullName>
        <label>Weight Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Return</label>
    <listViews>
        <fullName>zkmulti__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Return-{00000000}</displayFormat>
        <label>Return Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>